--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <style>
     html { min-height: 100%; }
@@ -42,6 +42,7 @@
     li {
       position: relative;
       padding-left: 25px;
+      text-align: left;
     }
 
     .corrected::before {
@@ -55,7 +56,7 @@
     section {
         margin: 50px auto;
         max-width: 400px;
-        background: #dddddd;
+        background: #f7f4f4;
         padding: 40px 60px;
         /*padding-left: 0;*/
         border-radius: 6px;
@@ -78,7 +79,7 @@
 
     <ol>
         <li><a href="home.html">Главная</a></li>
-        <!--<li><a href="gallery.html">Галерея</a></li>-->
+        <li><a href="osik.html">Страхование и кредитование</a></li>
     </ol>
 </section>
 
