--- a/home.html
+++ b/home.html
@@ -8,25 +8,25 @@
     <title>Купить или продать машину в Архангельске | Продажа авто с пробегом в Архангельске по низким ценам</title>
     <meta name="keywords" content="продажа авто с пробегом в архангельске, продать машину в архангельске">
     <meta name="description" content="Автосалон Лаура является официальным дилером автомобилей Опель, Шевроле. Также в салонах Лаура можно продать свое авто с  пробегом в Архангельске по выгодной программе.">
-    <link rel="stylesheet" href="http://laura-arh.ru/css/core.css">
-    <link rel="stylesheet" type="text/css" href="http://laura-arh.ru/css/slider.css">
-    <link rel="stylesheet" href="http://laura-arh.ru/js/fancybox/source/jquery.fancybox.css">
-    <link rel="stylesheet" href="http://laura-arh.ru/js/jqueryui/css/jqueryui.css">
+    <link rel="stylesheet" href="./css/core.css">
+    <!--<link rel="stylesheet" type="text/css" href="http://laura-arh.ru/css/slider.css">-->
+    <link rel="stylesheet" href="./js/fancybox/source/jquery.fancybox.css">
+    <link rel="stylesheet" href="./js/jqueryui/css/jqueryui.css">
     <link rel="stylesheet/less" href="style.less">
     
     <!--<link rel="stylesheet/less" href="./css/style.css">-->
     <link rel="stylesheet/css" href="./css/restyle.css">
     
     <link rel="stylesheet" href="./consultant/grnstylecconsmin.css">
-    <script src="http://laura-arh.ru/js/less-1.3.3.min.js"></script>
-    <script src="http://laura-arh.ru/js/jquery-1.8.2.min.js"></script>
-    <script src="http://laura-arh.ru/js/fancybox/source/jquery.fancybox.js"></script>
-    <script src="http://laura-arh.ru/js/jcarousellite.js"></script>
-    <script src="http://laura-arh.ru/js/mousewheel.js"></script>
-    <script src="http://laura-arh.ru/js/jquery.cycle2.min.js"></script>
-    <script src="http://laura-arh.ru/js/jquery.maskedinput.min.js"></script>
-    <script src="http://laura-arh.ru/js/script.js"></script>
-    <script src="http://laura-arh.ru/js/cms-file-upload.js"></script><!--<script type="text/javascript" src="/consultant/consjs.php"></script>-->
+    <script src="./js/less-1.3.3.min.js"></script>
+    <script src="./js/jquery-1.8.2.min.js"></script>
+    <script src="./js/fancybox/source/jquery.fancybox.js"></script>
+    <script src="./js/jcarousellite.js"></script>
+    <script src="./js/mousewheel.js"></script>
+    <script src="./js/jquery.cycle2.min.js"></script>
+    <script src="./js/jquery.maskedinput.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/cms-file-upload.js"></script><!--<script type="text/javascript" src="/consultant/consjs.php"></script>-->
     <script type="text/javascript" src="./js/site.js"></script>
     <script>
         $(document).ready(function () {
